@@ -1833,5 +1833,23 @@ EOT
       assert_equal((bug3534[1]+"\n").encode(e), r.gets(), bug3534[1])
     end
   end
+
+  def test_puts_widechar
+    bug = '[ruby-dev:42212]'
+    r, w = IO.pipe(Encoding::ASCII_8BIT)
+    r.binmode
+    w.binmode
+    w.puts(0x010a.chr(Encoding::UTF_32BE))
+    w.puts(0x010a.chr(Encoding::UTF_16BE))
+    w.puts(0x0a010000.chr(Encoding::UTF_32LE))
+    w.puts(0x0a01.chr(Encoding::UTF_16LE))
+    w.close
+    assert_equal("\x00\x00\x01\x0a\n", r.read(5), bug)
+    assert_equal("\x01\x0a\n", r.read(3), bug)
+    assert_equal("\x00\x00\x01\x0a\n", r.read(5), bug)
+    assert_equal("\x01\x0a\n", r.read(3), bug)
+    assert_equal("", r.read, bug)
+    r.close
+  end
 end
 
