@@ -1,13 +1,13 @@
 #define RUBY_VERSION "1.9.2"
-#define RUBY_PATCHLEVEL 42
+#define RUBY_PATCHLEVEL 43
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 9
 #define RUBY_VERSION_TEENY 1
 
 #define RUBY_RELEASE_YEAR 2010
 #define RUBY_RELEASE_MONTH 11
-#define RUBY_RELEASE_DAY 15
-#define RUBY_RELEASE_DATE "2010-11-15"
+#define RUBY_RELEASE_DAY 24
+#define RUBY_RELEASE_DATE "2010-11-24"
 
 #include "ruby/version.h"
 
